fixed padding and spacing

--- a/action.css
+++ b/action.css
@@ -136,7 +136,7 @@ li a:hover {
 }
 
 .action-card p {
-    text-align: justify;
+    text-align: center;
     font-size: 1.1rem;
 }
 
