--- a/causes.css
+++ b/causes.css
@@ -65,7 +65,7 @@ li a:hover {
     text-align: center;
     position: absolute;
     width: 100%;
-    top: 285px;
+    top: 270px;
     font-size: 30px;
 }
 
@@ -78,7 +78,7 @@ li a:hover {
     font-size: 20px;
     border-radius: 10px;
     display: inline-block;
-    margin-top: 26rem;
+    margin-top: 25rem;
 }
 
 .btn:hover {
@@ -359,7 +359,7 @@ li a:hover {
 .calculator {
     font-family: "Montserrat";
     text-align: center;
-    padding: 60px 20px;
+    padding: 50px 20px;
 }
 
 .calculator-title {
