--- a/solutions.css
+++ b/solutions.css
@@ -55,7 +55,7 @@ li a:hover {
     font-size: 70px;
     text-align: center;
     position: absolute; 
-    top: 170px;
+    top: 150px;
     width: 100%;
 }
 
@@ -65,7 +65,7 @@ li a:hover {
     text-align: center;
     position: absolute;
     width: 100%;
-    top: 280px;
+    top: 270px;
     font-size: 30px;
 }
 
